--- a/Doan1/Model/Model.csproj
+++ b/Doan1/Model/Model.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Dao\AcountDao.cs" />
+    <Compile Include="Dao\CustomerDao.cs" />
     <Compile Include="Dao\SupplierDao.cs" />
     <Compile Include="EF\Account.cs" />
     <Compile Include="EF\Category.cs" />
