--- a/Doan1/Doan1/Doan1.csproj
+++ b/Doan1/Doan1/Doan1.csproj
@@ -145,7 +145,9 @@
     <Compile Include="Common\AccountLogin.cs" />
     <Compile Include="Common\CommonConstant.cs" />
     <Compile Include="Common\Encryptor.cs" />
+    <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -3748,6 +3750,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\css\buttonaddsl.css" />
     <Content Include="Content\css\shop-homepage.css" />
     <Content Include="Content\PagedList.css" />
     <Content Include="Content\stylebyme.css" />
@@ -3769,6 +3772,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\EmployeeImage.png" />
+    <Content Include="Images\giohang.png" />
+    <Content Include="Images\InventoryItemMaterial.png" />
     <Content Include="Images\Product\gaythethaoadidasnu.jpg" />
     <Content Include="Images\Product\giaybalenciaganu.jfif" />
     <Content Include="Images\Product\giaybatanuphoimatmeodethuong.jpg" />
@@ -3783,6 +3789,10 @@
     <Content Include="Images\Product\giaythethaohanquocnu.jfif" />
     <Content Include="Images\Product\giaythethaonuchanmeo.jfif" />
     <Content Include="Images\Product\giaythethaonuGucci.jpg" />
+    <Content Include="Images\search--v2.png" />
+    <Content Include="Images\slideshow\giaymatcuoi.jpg" />
+    <Content Include="Images\slideshow\giaynamgaga.png" />
+    <Content Include="Images\slideshow\giaythethaonuGucci.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Areas\Admin\Views\web.config" />
@@ -4065,7 +4075,13 @@
     <Content Include="Content\vendor\jquery\jquery.min.map" />
     <Content Include="Content\vendor\jquery\jquery.slim.min.map" />
     <Content Include="Areas\Admin\Views\Product\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\Product\Edit.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
+    <Content Include="Scripts\fotorama-4.6.4\example.html" />
+    <Content Include="Scripts\fotorama-4.6.4\fotorama%402x.png" />
+    <Content Include="Scripts\fotorama-4.6.4\fotorama.css" />
+    <Content Include="Scripts\fotorama-4.6.4\fotorama.js" />
+    <Content Include="Scripts\fotorama-4.6.4\fotorama.png" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
@@ -4092,10 +4108,15 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\_ProductView.cshtml" />
+    <Content Include="Views\Product\Index.cshtml" />
+    <Content Include="Views\Category\Index.cshtml" />
+    <Content Include="Views\Product\Detail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Views\Base\" />
+    <Folder Include="Images\Product\Detail\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
