--- a/Doan1/Model/Model.csproj
+++ b/Doan1/Model/Model.csproj
@@ -99,14 +99,17 @@
     <Compile Include="EF\Category_Group.cs" />
     <Compile Include="EF\Color.cs" />
     <Compile Include="EF\Comments.cs" />
+    <Compile Include="EF\Credential.cs" />
     <Compile Include="EF\Customer.cs" />
     <Compile Include="EF\DoanDbContext.cs" />
+    <Compile Include="EF\GroupAccount.cs" />
     <Compile Include="EF\ImageProduct.cs" />
     <Compile Include="EF\News.cs" />
     <Compile Include="EF\Order.cs" />
     <Compile Include="EF\OrderDetail.cs" />
     <Compile Include="EF\OrderStatus.cs" />
     <Compile Include="EF\Product.cs" />
+    <Compile Include="EF\Role.cs" />
     <Compile Include="EF\Size.cs" />
     <Compile Include="EF\Staff.cs" />
     <Compile Include="EF\Status.cs" />
@@ -114,6 +117,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\CategoryViewWebModel.cs" />
     <Compile Include="ViewModel\OrderViewModel.cs" />
+    <Compile Include="ViewModel\OrderViewViewModel.cs" />
     <Compile Include="ViewModel\ProductViewModel.cs" />
     <Compile Include="ViewModel\ProductViewWebModel.cs" />
   </ItemGroup>
