--- a/Doan1/Doan1/Doan1.csproj
+++ b/Doan1/Doan1/Doan1.csproj
@@ -4857,6 +4857,8 @@
     <Content Include="Views\Order\_OrderDetailView.cshtml" />
     <Content Include="Views\Order\_OrderView.cshtml" />
     <Content Include="Views\Category\_ProductView.cshtml" />
+    <Content Include="Views\Shared\_OrderLayout.cshtml" />
+    <Content Include="Views\Order\l2.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
